<resources>
    <string name="app_name">HeyBeach</string>
    <string name="beaches">Beaches</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="log_out">Log out</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="email_not_valid">Please enter valid email</string>
    <string name="password_not_valid">Password must be at least 6 characters</string>
    <string name="error_logging_in">Error logging in</string>
    <string name="error_sign_up">Error signup</string>
    <string name="welcome">Welcome %s</string>
    <string name="email_formatted">Email: %s</string>
    <string name="id_formatted">Id: %s</string>
    <string name="error_fetching_data">Error fetching data</string>
    <string name="try_again">Try again</string>
</resources>
