<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:orientation="vertical"
                                                   android:padding="16dp"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <Button android:layout_width="0dp"
            android:id="@+id/signupButton"
            android:theme="@style/SolidButton"
            android:text="@string/signup"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content"/>

    <Button android:layout_width="0dp"
            android:id="@+id/loginButton"
            android:theme="@style/FlatButton"
            android:text="@string/login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="wrap_content"/>


    <Button android:layout_width="0dp"
            android:id="@+id/logOutButton"
            android:theme="@style/SolidButton"
            android:text="@string/log_out"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>