<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:orientation="vertical"
                                                   android:id="@+id/parentView"
                                                   android:padding="16dp"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/emailLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:gravity="center"
                android:id="@+id/emailEdit"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:minHeight="40dp"
                android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailLayout"
            android:id="@+id/passwordLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:gravity="center"
                android:id="@+id/passwordEdit"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:minHeight="40dp"
                android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button android:layout_width="0dp"
            android:id="@+id/actionButton"
            android:theme="@style/SolidButton"
            android:text="@string/login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="wrap_content"/>

    <ProgressBar android:layout_width="wrap_content"
                 android:id="@+id/progress"
                 android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>